--- a/lab/lab3.html
+++ b/lab/lab3.html
@@ -125,6 +125,14 @@
 		
 		
 	<h3 id="task-5-tof-sensor-speed">Task 5: ToF Sensor Speed</h3>
+	<img class="img-responsive" src="https://leewx1020.github.io/lab_pic/lab3/loop.jpeg" alt=""width="500" height="500"/>
+		<p>In this task, we still need to modify the code of "ReadDistance". 
+		"distanceSensor.checkForDataReady()" command is useful to check if the data is available. 
+		So, I set up a while loop to check both sensors. The code is shown above. 
+		As you can see shown in the screenshot below, there are 30 ms to get the next distance data. 
+		The speed of getting distance is not dependent on the Artemis. ToF is the limitation. </p>
+	<img class="img-responsive" src="https://leewx1020.github.io/lab_pic/lab3/task5.jpeg" alt=""width="500" height="500"/>	
+		
 		
 		
 	<h3 id="task-6-time-vs.-distance">Task 6: Time vs. Distance</h3>
