--- a/lab/lab3.html
+++ b/lab/lab3.html
@@ -103,7 +103,9 @@
 		And the short-distance mode has almost no impact under strong ambient light. </p>
 		<p>For the robot, it should be better to choose the short-distance mode. 
 		The robot is always used in some dangerous, dark, or accuracy-needed situations. 
-		So, it is important to exclude the surrounding impact. </p>
+		So, it is important to exclude the surrounding impact. 
+		To get the measured distance, the picture below shows hoe I setup my experiment </p>
+	<img class="img-responsive" src="https://leewx1020.github.io/lab_pic/lab3/setup.jpeg" alt=""width="500" height="500"/>
 		<p>With the short-distance mode, I gathered the data about measured distance and actual distance by using the code found in "Example1_ReadDistance". 
 		The plot shown below is made by MATLAB. </p>
 	<img class="img-responsive" src="https://leewx1020.github.io/lab_pic/lab3/task3.jpeg" alt=""width="500" height="500"/>
