--- a/lab/lab3.html
+++ b/lab/lab3.html
@@ -141,12 +141,10 @@
 		
 		
 	<h3 id="Additional-tasks-for-5000-level-students">Additional tasks for 5000-level students</h3>
-	h3 id="Additional-tasks-1">Additional tasks 1:</h3>
-	<p>An infrared sensor is used to detect the infrared radiation in the surrounding environment. 
-	It can measure the heat emitted by the obstacle. However, what we measured in this lab is the distance from the obstacle. 
-	Here are some advantages of infrared sensors. Infrared sensors can detect surrounding in daytime and nighttime accurately. 
-	And they are smaller in size and afford less money. It also has some disadvantages. 
-	It is only effective in a shorter distance and with the range increasing, the accuracy is decreasing. 
-	Infrared frequencies are affected by hard objects as well as smoke, dust, or sunlight.</p>
+	<h3 id="Additional-tasks-1">Additional tasks 1:</h3>
+	<p>There are two types of Infrared sensors (aka IR sensors). An active IR sensor contains both the transmitter and receiver, 
+	while the passive IR sensor only contains a detector. Active IR sensors usually use LED or laser diodes as the source, 
+	like break beam sensors and reflection. Passive IR sensors usually use the radiates energy from the object as an IR source/transmitter, 
+	like Thermocouple-Thermopile and Bolometer.</p>
 		
-	h3 id="Additional-tasks-2">Additional tasks 2:</h3>
+	<h3 id="Additional-tasks-2">Additional tasks 2:</h3>
