--- a/lab/lab3.html
+++ b/lab/lab3.html
@@ -148,3 +148,11 @@
 	like Thermocouple-Thermopile and Bolometer.</p>
 		
 	<h3 id="Additional-tasks-2">Additional tasks 2:</h3>
+		<p>This task is required to test if there's any influence on the color and texture. 
+		The picture I showed below is three different textures and color backgrounds. 
+		I put the distance with 10cm, 20cm, and 30cm separately to use the ToF sensor to measure the distance. 
+		The results shown in these three backgrounds only have some small differences, like 1-5 mm. 
+		This can be neglected because I use my hand to hold the ToF which will cause some small errors. 
+		Therefore, based on the experiment I designed, the ToF sensor is not sensitive to the colors and textures.</p> 
+	<img class="img-responsive" src="https://leewx1020.github.io/lab_pic/lab3/color.jpeg" alt=""width="500" height="500"/>
+	
