--- a/lab/lab3.html
+++ b/lab/lab3.html
@@ -145,7 +145,10 @@
 	<p>There are two types of Infrared sensors (aka IR sensors). An active IR sensor contains both the transmitter and receiver, 
 	while the passive IR sensor only contains a detector. Active IR sensors usually use LED or laser diodes as the source, 
 	like break beam sensors and reflection. Passive IR sensors usually use the radiates energy from the object as an IR source/transmitter, 
-	like Thermocouple-Thermopile and Bolometer.</p>
+	like Thermocouple-Thermopile and Bolometer.The pros of active IR sensor is that they identify movement in the daytime and evening dependably. 
+	The sensor will detect the item without any contract with the item. 
+	The disadvantage of a passive IR sensor is that it does not operate greater than 35 degrees C and is insensitive to 
+	very slow motion of the objects.</p>
 		
 	<h3 id="Additional-tasks-2">Additional tasks 2:</h3>
 		<p>This task is required to test if there's any influence on the color and texture. 
