--- a/lab/lab4.html
+++ b/lab/lab4.html
@@ -55,5 +55,7 @@
         <div class="row gx-4 gx-lg-5 justify-content-center">
         <div class="col-md-9 col-lg-9 col-xl-9">
 		
-	<h2 id="lab-4">Lab 4</h2>
+	<h2 id="lab-4">Lab 4 - IMU</h2>
+		
+	
 
