--- a/lab/lab4.html
+++ b/lab/lab4.html
@@ -57,5 +57,30 @@
 		
 	<h2 id="lab-4">Lab 4 - IMU</h2>
 		
+	<h3 id="task-1-set-up-the-imu">Task 1: Setup The IMU</h3>
+		
+	<img class="img-responsive" src="https://leewx1020.github.io/lab_pic/lab3/wire2.jpeg" alt=""width="500" height="500"/>	
+		
 	
+		
+		
+	<h3 id="task-2-Accelerometer">Task 2: Accelerometer</h3>
+		
+		
+		
+		
+	<h3 id="task-3-Gyroscope">Task 3: Gyroscope</h3>
+		
+		
+		
+		
+	<h3 id="task-4-Sample-Data">Task 4: Sample Data</h3>
+		
+	
+		
+	<h3 id="task-5-Cut-the-Coord">Task 5: Cut the Coord</h3>
+		
+		
+		
+	<h3 id="task-6-Record-a-Stunt">Task 6: Record a Stunt</h3>
 
