--- a/lab/lab4.html
+++ b/lab/lab4.html
@@ -59,7 +59,7 @@
 		
 	<h3 id="task-1-set-up-the-imu">Task 1: Setup The IMU</h3>
 		
-	<img class="img-responsive" src="https://leewx1020.github.io/lab_pic/lab3/wire2.jpeg" alt=""width="500" height="500"/>	
+	<img class="img-responsive" src="https://leewx1020.github.io/lab_pic/lab4/setup.jpeg" alt=""width="500" height="500"/>	
 		
 	
 		
@@ -79,6 +79,7 @@
 	
 		
 	<h3 id="task-5-Cut-the-Coord">Task 5: Cut the Coord</h3>
+	<img class="img-responsive" src="https://leewx1020.github.io/lab_pic/lab4/battery.jpeg" alt=""width="500" height="500"/>
 		
 		
 		
