--- a/lab/lab4.html
+++ b/lab/lab4.html
@@ -67,6 +67,10 @@
 		<p>The AD0_VAL has two values, 0 and 1. The definition of the AD0_VAL is the value of the last bit of the I2C address. 
 		The default value of the IMU is 1, and when the ADR jumper is connected, the value becomes 0. 
 		In this lab, we do not have the ADR jumper, so the AD0_VAL we set should be 1. </p>
+		<p>After running the example code, I check the Serial Monitor and compare the data shown for the Accelerometer and Gyroscope. 
+		I randomly move the IMU board and check the value changed. It shows that when I speed up the board, 
+		the Accelerometer value will increase and when I rotate the board, the Gyroscope value will increase. </p>
+
 		
 			
 	<h3 id="task-2-Accelerometer">Task 2: Accelerometer</h3>
