--- a/lab/lab4.html
+++ b/lab/lab4.html
@@ -88,6 +88,10 @@
 	
 		
 	<h3 id="task-5-Cut-the-Coord">Task 5: Cut the Coord</h3>
+		<p>There are two types of batteries we can choose from, 650 mAh and 850 mAh. 
+		I would like to choose the 650 mAh to connect with the Artemis because those electronic kinds of stuff will use 
+		less battery capacity compared with the motors from the car. So, I could leave the 850 mAh to charge the car. 
+		The picture below is my Artemis connected to the 650mAh battery.</p>
 	<img class="img-responsive" src="https://leewx1020.github.io/lab_pic/lab4/battery.jpeg" alt=""width="500" height="500"/>
 		
 		
