--- a/lab/lab4.html
+++ b/lab/lab4.html
@@ -74,8 +74,9 @@
 		
 			
 	<h3 id="task-2-Accelerometer">Task 2: Accelerometer</h3>
+	<img class="img-responsive" src="https://leewx1020.github.io/lab_pic/lab4/equation.jpeg">
 		
-	<img class="img-responsive" src="https://leewx1020.github.io/lab_pic/lab4/acc.jpeg" alt=""width="500" height="500"/>
+	<img class="img-responsive" src="https://leewx1020.github.io/lab_pic/lab4/acc.jpeg">
 		
 		
 		
