--- a/lab/lab4.html
+++ b/lab/lab4.html
@@ -74,9 +74,10 @@
 		
 			
 	<h3 id="task-2-Accelerometer">Task 2: Accelerometer</h3>
-	<img class="img-responsive" src="https://leewx1020.github.io/lab_pic/lab4/equation.jpeg">
+	<img class="img-responsive" src="https://leewx1020.github.io/lab_pic/lab4/equation.jpeg" alt=""width="300" height="300"/>
 		
-	<img class="img-responsive" src="https://leewx1020.github.io/lab_pic/lab4/acc.jpeg">
+	<img class="img-responsive" src="https://leewx1020.github.io/lab_pic/lab4/pitch.jpeg"/>
+	<img class="img-responsive" src="https://leewx1020.github.io/lab_pic/lab4/roll.jpeg"/>
 		
 		
 		
