--- a/lab/lab4.html
+++ b/lab/lab4.html
@@ -79,6 +79,11 @@
 	<img class="img-responsive" src="https://leewx1020.github.io/lab_pic/lab4/pitch.jpeg"/>
 	<img class="img-responsive" src="https://leewx1020.github.io/lab_pic/lab4/roll.jpeg"/>
 		
+	<img class="img-responsive" src="https://leewx1020.github.io/lab_pic/lab4/time_pitch.jpeg" alt=""width="500" height="500"/>
+	<img class="img-responsive" src="https://leewx1020.github.io/lab_pic/lab4/freq_pitch.jpeg" alt=""width="500" height="500"/>
+	<img class="img-responsive" src="https://leewx1020.github.io/lab_pic/lab4/time_roll.jpeg" alt=""width="500" height="500"/>
+	<img class="img-responsive" src="https://leewx1020.github.io/lab_pic/lab4/freq_roll.jpeg" alt=""width="500" height="500"/>	
+		
 		
 		
 		
