--- a/lab/lab4.html
+++ b/lab/lab4.html
@@ -75,7 +75,12 @@
 			
 	<h3 id="task-2-Accelerometer">Task 2: Accelerometer</h3>
 	<img class="img-responsive" src="https://leewx1020.github.io/lab_pic/lab4/equation.jpeg" alt=""width="300" height="300"/>
-		
+		<p>To convert accelerometer data into pitch and roll, I use the equation posted in the lecture, which is shown above. 
+		The Arduino code for that are "float pitch_a = atan2(myICM.accX(),myICM.accZ())*180/M_PI;", 
+		and "float roll_a = atan2(myICM.accY(),myICM.accZ())*180/M_PI;". To use M_PI, 
+		we have to add "#include <math.h>" at the very beginning.
+		The two pictures shown below are the SerialPlot screenshots for pitch and roll moving from -90 to 0, and then to 90 degrees. 
+		The first one is pitch and the second one is roll. </p>
 	<img class="img-responsive" src="https://leewx1020.github.io/lab_pic/lab4/pitch.jpeg"/>
 	<img class="img-responsive" src="https://leewx1020.github.io/lab_pic/lab4/roll.jpeg"/>
 		
@@ -88,11 +93,15 @@
 		
 		
 	<h3 id="task-3-Gyroscope">Task 3: Gyroscope</h3>
+	<img class="img-responsive" src="https://leewx1020.github.io/lab_pic/lab4/equation2.jpeg" alt=""width="300" height="300"/>
 		
+	
 		
 		
 		
 	<h3 id="task-4-Sample-Data">Task 4: Sample Data</h3>
+		
+		
 		
 	
 		
