--- a/lab/lab4.html
+++ b/lab/lab4.html
@@ -99,7 +99,10 @@
 		
 	<h3 id="task-3-Gyroscope">Task 3: Gyroscope</h3>
 	<img class="img-responsive" src="https://leewx1020.github.io/lab_pic/lab4/equation2.jpeg" alt=""width="300" height="300"/>
-		
+	
+	<iframe width="560" height="315"  
+ 	src="https://www.youtube.com/embed/4mIt2KBn55w"  
+ 	frameborder="0" allowfullscreen></iframe>
 		
 	
 		
