--- a/lab/lab4.html
+++ b/lab/lab4.html
@@ -103,13 +103,23 @@
 	<iframe width="560" height="315"  
  	src="https://www.youtube.com/embed/4mIt2KBn55w"  
  	frameborder="0" allowfullscreen></iframe>
-		
 	
+		
+	<img class="img-responsive" src="https://leewx1020.github.io/lab_pic/lab4/equation3.jpeg" alt=""width="300" height="300"/>
+		
+	<iframe width="560" height="315"  
+ 	src="https://www.youtube.com/embed/hVHZFa6kcbM"  
+ 	frameborder="0" allowfullscreen></iframe>
 		
 		
 		
 	<h3 id="task-4-Sample-Data">Task 4: Sample Data</h3>
 		
+	<img class="img-responsive" src="https://leewx1020.github.io/lab_pic/lab4/note.jpeg" alt=""width="300" height="300"/>
+	<img class="img-responsive" src="https://leewx1020.github.io/lab_pic/lab4/data.jpeg" alt=""width="300" height="300"/>
+	<img class="img-responsive" src="https://leewx1020.github.io/lab_pic/lab4/tof.jpeg" alt=""width="300" height="300"/
+	<img class="img-responsive" src="https://leewx1020.github.io/lab_pic/lab4/acc.jpeg" alt=""width="300" height="300"/>
+	<img class="img-responsive" src="https://leewx1020.github.io/lab_pic/lab4/gyr.jpeg" alt=""width="300" height="300"/>
 		
 		
 	
