--- a/lab/lab4.html
+++ b/lab/lab4.html
@@ -115,11 +115,11 @@
 		
 	<h3 id="task-4-Sample-Data">Task 4: Sample Data</h3>
 		
-	<img class="img-responsive" src="https://leewx1020.github.io/lab_pic/lab4/note.jpeg" alt=""width="300" height="300"/>
-	<img class="img-responsive" src="https://leewx1020.github.io/lab_pic/lab4/data.jpeg" alt=""width="300" height="300"/>
-	<img class="img-responsive" src="https://leewx1020.github.io/lab_pic/lab4/tof.jpeg" alt=""width="300" height="300"/
-	<img class="img-responsive" src="https://leewx1020.github.io/lab_pic/lab4/acc.jpeg" alt=""width="300" height="300"/>
-	<img class="img-responsive" src="https://leewx1020.github.io/lab_pic/lab4/gyr.jpeg" alt=""width="300" height="300"/>
+	<img class="img-responsive" src="https://leewx1020.github.io/lab_pic/lab4/note.jpeg" alt=""width="400" height="400"/>
+	<img class="img-responsive" src="https://leewx1020.github.io/lab_pic/lab4/data.jpeg" alt=""width="400" height="400"/>
+	<img class="img-responsive" src="https://leewx1020.github.io/lab_pic/lab4/tof.jpeg" alt=""width="500" height="500"/
+	<img class="img-responsive" src="https://leewx1020.github.io/lab_pic/lab4/acc.jpeg" alt=""width="500" height="500"/>
+	<img class="img-responsive" src="https://leewx1020.github.io/lab_pic/lab4/gyr.jpeg" alt=""width="500" height="500"/>
 		
 		
 	
@@ -134,4 +134,7 @@
 		
 		
 	<h3 id="task-6-Record-a-Stunt">Task 6: Record a Stunt</h3>
+	<iframe width="560" height="315"  
+ 	src="https://www.youtube.com/embed/obZ4E6_h5Xo"  
+ 	frameborder="0" allowfullscreen></iframe>
 
