--- a/lab/lab4.html
+++ b/lab/lab4.html
@@ -167,10 +167,12 @@
  	src="https://www.youtube.com/embed/obZ4E6_h5Xo"  
  	frameborder="0" allowfullscreen></iframe>
 		
-		<p>The video below is the Stunt with the Artemis board. And I gather the data from the Artemis board and plot it in Python.</p>
+		<p>The video below is the Stunt with the Artemis board. And I gather the data from the Artemis board and plot it in Python.
+		I also attached the picture of my RC car with Artemis board on it. </p>
 	<iframe width="560" height="315"  
- 	src="https://www.youtube.com/embed/"  
+ 	src="https://www.youtube.com/embed/eTNBYHt7G7Y"  
  	frameborder="0" allowfullscreen></iframe>
+	<img class="img-responsive" src="https://leewx1020.github.io/lab_pic/lab4/rc_car.jpeg" alt=""width="500" height="500"/>
 	<img class="img-responsive" src="https://leewx1020.github.io/lab_pic/lab4/tof.jpeg" alt=""width="500" height="500"/>
 	<img class="img-responsive" src="https://leewx1020.github.io/lab_pic/lab4/acc.jpeg" alt=""width="500" height="500"/>
 	<img class="img-responsive" src="https://leewx1020.github.io/lab_pic/lab4/gyr.jpeg" alt=""width="500" height="500"/>
