--- a/lab/lab5.html
+++ b/lab/lab5.html
@@ -95,18 +95,35 @@
   frameborder="0" allowfullscreen></iframe>
 		
 		
-  <h3 id="task-2">Task 2: Wheels Spinning</h3>
+  <h3 id="task-2">Task 2: One Wheels Spinning</h3>
+	<p>I unscrew the top blue shell from the car, and then cut the LEDs and PCB wires. 
+	There are three sets of wires (red as Vin and black as ground) we have to connect, two for the motors and one for the battery. 
+	First, I mount one side of the motor and use the external power supply to see if the wheels can move both forward and backward. 
+	The code below is what I used to make the wheel move in both directions. 
+	The pin I use is 6 and 7. The meaning of my code is that the car moves forward for one second, 
+	next, stops for one second, then moves backward, and stops for one second. </p>
           
-       
+  <img class="img-responsive" src="https://leewx1020.github.io/lab_pic/lab5/one_wheel.jpeg" alt=""width="500" height="500"/>
+		
+	<p>The video below shows that one side of the wheel works well and this is charged by an external power supply.</p>
   <iframe width="560" height="315"  
-  src="https://www.youtube.com/embed/"  
-  frameborder="0" allowfullscreen></iframe>       
+  src="https://www.youtube.com/embed/rTFAOSG13yw"  
+  frameborder="0" allowfullscreen></iframe>
+		
+	<p>The second video is charged by the battery by soldering the Vin and Ground from both motor driver with the red and black wires from the RC car.</p>
+  <iframe width="560" height="315"  
+  src="https://www.youtube.com/embed/gkE81e1Km4k"  
+  frameborder="0" allowfullscreen></iframe>
+		
+		
 		
 		
   <h3 id="task">Task 3: Both Wheels Spinning</h3>
 		
+  <img class="img-responsive" src="https://leewx1020.github.io/lab_pic/lab5/both.jpeg" alt=""width="500" height="500"/>
+		
   <iframe width="560" height="315"  
-  src="https://www.youtube.com/embed/"  
+  src="https://www.youtube.com/embed/TMqaou4Puac"  
   frameborder="0" allowfullscreen></iframe>		
 		
 		
