--- a/lab/lab5.html
+++ b/lab/lab5.html
@@ -100,7 +100,7 @@
 	There are three sets of wires (red as Vin and black as ground) we have to connect, two for the motors and one for the battery. 
 	First, I mount one side of the motor and use the external power supply to see if the wheels can move both forward and backward. 
 	The code below is what I used to make the wheel move in both directions. 
-	The pin I use is 6 and 7. The meaning of my code is that the car moves forward for one second, 
+	The pin I use is 15 and 16. The meaning of my code is that the car moves forward for one second, 
 	next, stops for one second, then moves backward, and stops for one second. </p>
           
   <img class="img-responsive" src="https://leewx1020.github.io/lab_pic/lab5/one_wheel.jpeg" alt=""width="500" height="500"/>
@@ -119,9 +119,11 @@
 		
 		
   <h3 id="task">Task 3: Both Wheels Spinning</h3>
-		
+	<p>To drive both motors together, we just have to make some small changes based on task 2. 
+	It requires defining the pin connected with the other side of the motor, which is pins 6 and 7.  
+	In the void loop, the logic is the same as the code from task 2 with the PIN changes. The picture below is the Arduino code I use.</p> 	
   <img class="img-responsive" src="https://leewx1020.github.io/lab_pic/lab5/both.jpeg" alt=""width="500" height="500"/>
-		
+	<p>The video below represents the wheel from both sides can work well with the 850mAh battery.</p>
   <iframe width="560" height="315"  
   src="https://www.youtube.com/embed/TMqaou4Puac"  
   frameborder="0" allowfullscreen></iframe>		
