--- a/lab/lab5.html
+++ b/lab/lab5.html
@@ -132,8 +132,8 @@
 		
   <h3 id="task">Task 4: Components Secured in the Car</h3>
 		
-          
-  <img class="img-responsive" src="https://leewx1020.github.io/lab_pic/lab5/.jpeg" alt=""width="500" height="500"/>        
+          <p>The picture below is all the components secured in the car and I clearly labeled the important components. </p>
+  <img class="img-responsive" src="https://leewx1020.github.io/lab_pic/lab5/setup.jpeg" alt=""width="500" height="500"/>        
 		
 		
   <h3 id="task">Task 5: PWM Value Discussion</h3>
