--- a/lab/lab6.html
+++ b/lab/lab6.html
@@ -31,14 +31,14 @@
 			  <li class="nav-item"><a class="nav-link" href="https://leewx1020.github.io/lab/lab3.html">LAB 3</a></li>
 			  <li class="nav-item"><a class="nav-link" href="https://leewx1020.github.io/lab/lab4.html">LAB 4</a></li>
 			  <li class="nav-item"><a class="nav-link" href="https://leewx1020.github.io/lab/lab5.html">LAB 5</a></li>
-        <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#about">LAB6</a></li>
+        <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#about">LAB 6</a></li>
 			  <li class="nav-item"><a class="nav-link" href="https://leewx1020.github.io/lab/lab7.html">LAB 7</a></li>
 			  <li class="nav-item"><a class="nav-link" href="https://leewx1020.github.io/lab/lab8.html">LAB 8</a></li>
 			  <li class="nav-item"><a class="nav-link" href="https://leewx1020.github.io/lab/lab9.html">LAB 9</a></li>
 			  <li class="nav-item"><a class="nav-link" href="https://leewx1020.github.io/lab/lab10.html">LAB 10</a></li>
 			  <li class="nav-item"><a class="nav-link" href="https://leewx1020.github.io/lab/lab11.html">LAB 11</a></li>
 			  <li class="nav-item"><a class="nav-link" href="https://leewx1020.github.io/lab/lab12.html">LAB 12</a></li>
-			  <li class="nav-item"><a class="nav-link" href="https://leewx1020.github.io/lab/lab13.html">LAB 13</a></li>
+			  
 			 	  
 		  </ul>
 		</div>
@@ -54,3 +54,17 @@
         <div class="container px-4 px-lg-5">
         <div class="row gx-4 gx-lg-5 justify-content-center">
         <div class="col-md-9 col-lg-9 col-xl-9">
+		
+		
+		
+	<h2>Lab 6 - Closed-loop Control(PID)</h2>
+	
+	<h3>Prelab</h3>
+	
+		
+		
+		
+	<h3>PID Discussion</h3>
+		
+		
+	
