--- a/lab/lab6.html
+++ b/lab/lab6.html
@@ -60,8 +60,13 @@
 	<h2>Lab 6 - Closed-loop Control(PID)</h2>
 	
 	<h3>Prelab</h3>
-	
-		
+		<p>I create a new Arduino code file and combine the necessary code from lab2 and lab3 to get a good setup for the Bluetooth and the 
+		ToF sensor. This is very similar to the task we did in lab 2. 
+		I create a case called PID_CONTROLL to set the data from Artemis to the computer. The code screenshot is shown below.</p> 
+	<img class="img-responsive" src="https://leewx1020.github.io/lab_pic/lab6/1.jpeg" alt=""width="500" height="500"/>
+		<p>Then in python code, we still need a notification handler to help to receive the data from Artemis. 
+		And then, we can get all the data needed by using the "send_command".</p>
+	<img class="img-responsive" src="https://leewx1020.github.io/lab_pic/lab6/2.jpeg" alt=""width="500" height="500"/>	
 		
 		
 	<h3>PID Discussion</h3>
