--- a/lab/lab6.html
+++ b/lab/lab6.html
@@ -71,5 +71,11 @@
 		
 	<h3>PID Discussion</h3>
 		
+	<h3>Range/Sampling time Discussion</h3>
+		
+	<h3>Graphs, code, videos, images, discussion of reaching task goal</h3>	
+		
+		
+	<h3>(5000) Wind-up implementation and discussion</h3>
 		
 	
