--- a/lab/lab6.html
+++ b/lab/lab6.html
@@ -76,6 +76,9 @@
 		
 	<h3>Graphs, code, videos, images, discussion of reaching task goal</h3>	
 		
+	<img class="img-responsive" src="https://leewx1020.github.io/lab_pic/lab6/pid.jpeg" alt=""width="500" height="500"/>
+	<img class="img-responsive" src="https://leewx1020.github.io/lab_pic/lab6/forward.jpeg" alt=""width="500" height="500"/>
+	<img class="img-responsive" src="https://leewx1020.github.io/lab_pic/lab6/stop_back.jpeg" alt=""width="500" height="500"/>
 		
 	<h3>(5000) Wind-up implementation and discussion</h3>
 		
