--- a/lab/lab6.html
+++ b/lab/lab6.html
@@ -86,6 +86,9 @@
 	<img class="img-responsive" src="https://leewx1020.github.io/lab_pic/lab6/forward.jpeg" alt=""width="500" height="500"/>
 	<img class="img-responsive" src="https://leewx1020.github.io/lab_pic/lab6/stop_back.jpeg" alt=""width="500" height="500"/>
 		
+	<img class="img-responsive" src="https://leewx1020.github.io/lab_pic/lab6/p2.jpeg" alt=""width="500" height="500"/>
+	<img class="img-responsive" src="https://leewx1020.github.io/lab_pic/lab6/p1.jpeg" alt=""width="500" height="500"/>
+		
 	<h3>(5000) Wind-up implementation and discussion</h3>
 		
 	
