--- a/lab/lab6.html
+++ b/lab/lab6.html
@@ -95,7 +95,11 @@
 		In the Arduino code, I use the current error to minus the previous error and all together divided it by the dt, 
 		which is d_error = (error - prev_error)/(dt/1000). </p>
 	<h3>Range/Sampling time Discussion</h3>
-		
+		<p>After getting the data in the Jupyter Notebook, I found the sampling time is around 10ms. 
+		So, the frequency reaches 200 Hz, which is very fast. 
+		Also, as we discussed in lab 5, there is a deadband of the motor that the value below the deadband will not be able to 
+		overcome the static friction. So, I set the deadband value to 45 in this lab and make a loop to prevent this kind of situation. 
+		The detailed code is shown in the next section. </p>
 	<h3>Graphs, code, videos, images, discussion of reaching task goal</h3>	
 		
 	<img class="img-responsive" src="https://leewx1020.github.io/lab_pic/lab6/pid.jpeg" alt=""width="500" height="500"/>
