--- a/lab/lab6.html
+++ b/lab/lab6.html
@@ -131,5 +131,10 @@
 	<img class="img-responsive" src="https://leewx1020.github.io/lab_pic/lab6/pi22.jpeg" alt=""width="400" height="400"/>
 	
 	<h3>(5000) Wind-up implementation and discussion</h3>
-		
+		<p>Integrator wind-up is a phenomenon that occurs in control systems that use integral feedback. 
+		When the system's output reached its maximum or minimum limit, 
+		the integral term in the feedback controller can continue to accumulate error, 
+		causing the system to overshoot its setpoint when the output becomes unsaturated.
+		To prevent the integrator wind-up can be done by setting a maximum value for the integral term.
+		The maximum value will depend on saturation limit of the output. The higher limit for the output for the car is 255. </p>
 	
