--- a/lab/lab10.html
+++ b/lab/lab10.html
@@ -7,7 +7,7 @@
 
 <html lang="en">
 <head>
-  <title>Wenxin Li</title>
+  <title>LAB 10</title>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css">
@@ -45,7 +45,7 @@
         <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#about">LAB 10</a></li>
 			  <li class="nav-item"><a class="nav-link" href="https://leewx1020.github.io/lab/lab11.html">LAB 11</a></li>
 			  <li class="nav-item"><a class="nav-link" href="https://leewx1020.github.io/lab/lab12.html">LAB 12</a></li>
-			  <li class="nav-item"><a class="nav-link" href="https://leewx1020.github.io/lab/lab13.html">LAB 13</a></li>
+			  
 			 	  
 		  </ul>
 		</div>
