--- a/lab/lab12.html
+++ b/lab/lab12.html
@@ -1,13 +1,8 @@
-<!DOCTYPE html>
-<!--
-    Plain-Academic by Vasilios Mavroudis
-    Released under the Simplified BSD License/FreeBSD (2-clause) License.
-    https://github.com/mavroudisv/plain-academic
--->
+
 
 <html lang="en">
 <head>
-  <title>Wenxin Li</title>
+  <title>LAB 12</title>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css">
@@ -45,7 +40,7 @@
 			  <li class="nav-item"><a class="nav-link" href="https://leewx1020.github.io/lab/lab10.html">LAB 10</a></li>
 			  <li class="nav-item"><a class="nav-link" href="https://leewx1020.github.io/lab/lab11.html">LAB 11</a></li>  
         <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#about">LAB 12</a></li>
-			  <li class="nav-item"><a class="nav-link" href="https://leewx1020.github.io/lab/lab13.html">LAB 13</a></li>
+			  
 			 	  
 		  </ul>
 		</div>
