--- a/lab/lab10.html
+++ b/lab/lab10.html
@@ -52,3 +52,9 @@
 	  </div>
 	</nav>
   
+<div id="main_content_wrap" class="outer">
+	<section id="main_content" class="inner">
+	<article class="mb-4">
+        <div class="container px-4 px-lg-5">
+        <div class="row gx-4 gx-lg-5 justify-content-center">
+        <div class="col-md-9 col-lg-9 col-xl-9">
