--- a/lab/lab7.html
+++ b/lab/lab7.html
@@ -55,3 +55,25 @@
         <div class="container px-4 px-lg-5">
         <div class="row gx-4 gx-lg-5 justify-content-center">
         <div class="col-md-9 col-lg-9 col-xl-9">
+		
+		
+		
+	<h2>Lab 7 - Kalman Filter</h2>
+		
+	<h3>Estimate drag and momentum</h3>
+		
+		
+		
+	<h3>Initialize KF</h3>
+		
+		
+		
+	<h3>Implement and test your Kalman Filter in Jupyter</h3>
+		
+		
+		
+	<h3>Extrapolation</h3>
+		
+		
+	
+		
