--- a/lab/lab7.html
+++ b/lab/lab7.html
@@ -61,7 +61,9 @@
 	<h2>Lab 7 - Kalman Filter</h2>
 		
 	<h3>Estimate drag and momentum</h3>
-		
+	<img class="img-responsive" src="https://leewx1020.github.io/lab_pic/lab7/explain.jpeg" alt=""width="500" height="500"/>
+	<img class="img-responsive" src="https://leewx1020.github.io/lab_pic/lab7/dis.jpeg" alt=""width="500" height="500"/>
+	<img class="img-responsive" src="https://leewx1020.github.io/lab_pic/lab7/vel.jpeg" alt=""width="500" height="500"/>
 		
 		
 	<h3>Initialize KF</h3>
