--- a/lab/lab7.html
+++ b/lab/lab7.html
@@ -64,6 +64,9 @@
 	<img class="img-responsive" src="https://leewx1020.github.io/lab_pic/lab7/explain.jpeg" alt=""width="500" height="500"/>
 	<img class="img-responsive" src="https://leewx1020.github.io/lab_pic/lab7/dis.jpeg" alt=""width="500" height="500"/>
 	<img class="img-responsive" src="https://leewx1020.github.io/lab_pic/lab7/vel.jpeg" alt=""width="500" height="500"/>
+	<img class="img-responsive" src="https://leewx1020.github.io/lab_pic/lab7/pwm.jpeg" alt=""width="500" height="500"/>
+	<img class="img-responsive" src="https://leewx1020.github.io/lab_pic/lab7/dm.jpeg" alt=""width="400" height="400"/>
+	<img class="img-responsive" src="https://leewx1020.github.io/lab_pic/lab7/matrix.jpeg" alt=""width="400" height="400"/>
 		
 		
 	<h3>Initialize KF</h3>
